@@ -61,8 +61,9 @@ property values, edit the values and click &quot;Save Changes&quot;.
 </tr>
 
 <dtml-in propertyMap mapping>
-<dtml-let type="not _.has_key('type') and 'string' or type">
-<tr>
+<dtml-let type="not _.has_key('type') and 'string' or type"
+          pdesc="propertyDescription(id)">
+<tr title="&dtml-pdesc;">
   <td align="left" valign="top" width="16">
   <dtml-if "'d' in _['sequence-item'].get('mode', 'awd')">
   <input type="checkbox" name="_ids:<dtml-var "REQUEST['management_page_charset_tag']">string:list" value="&dtml-id;"
